# capgenie

./: .gitignore  LICENSE  PUBLISH.md  README.md  README_AI_AGENT_PROJECT_JSON.md  pypi_instructions.md  pyproject.toml  requirements.txt  template_capcut_project_structure.md
.github/workflows/: publish.yml
capgenie/: __about__.py  __init__.py  file_manager.py  project_editor.py
template_capcut_project/: draftMainWindowLayoutConfig.json  draft_content.json  draft_content.json.bak  draft_meta_info.json  draft_settings  template.tmp
tests/: test_project_editor.py
